# genetic_programming_playground

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Readme.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: game.c  game.h  gp.c  main.c  rendering.c  rendering.h  simulation.c  style.h  trainer.c
